# trie

./: Readme.md  hello  hello.rs  hello2  hello2.rs  temp  temp.rs  trie  trie.rs
helloworld-tonic/: Cargo.toml  Dockerfile  words.txt
helloworld-tonic/proto/: helloworld.proto
helloworld-tonic/src/: indexer.rs  lb.rs  server.rs  trie.rs
